--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,23 +4,20 @@
       .left_item
         = current_user.name
       .right_item
-        = link_to "#",class:"right_item__btn" do
+        = link_to new_group_path,class:"right_item__btn" do
           = icon("far fa-edit", class: "right_item__btn--icon")
-        = link_to edit_user_path(current_user), class: "right_item__btn" do
+        = link_to edit_user_path(current_user.id), class: "right_item__btn" do
           = icon("fa fa-cog", class: "right_item__btn--icon")
 
       
 
   .side_bar__bottom
-    .side_bar__bottom--group
-      .group_name
-        techcamp
-      .group_message
-        まだメッセージはありません
+    - current_user.groups.each do |group|
+      .side_bar__bottom--group
+        = link_to "#" do
+          .group_name
+            = group.name
+          .group_message
+            まだメッセージはありません
 
-    .side_bar__bottom--group
-      .group_name
-        techcamp
-      .group_message
-        まだメッセージはありません
-
+    
