--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -14,10 +14,10 @@
   .side_bar__bottom
     - current_user.groups.each do |group|
       .side_bar__bottom--group
-        = link_to "#" do
+        = link_to group_messages_path(group) do
           .group_name
             = group.name
           .group_message
-            まだメッセージはありません
+            = group.show_message
 
     
