--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -109,6 +109,7 @@
     background-color: #fafafa;
     padding-top: 35px;
     padding-left: 40px;
+    overflow: auto;
     &--comment{
       .user{
         display: flex;
