--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -5,5 +5,6 @@
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .user_comment
     - if message.content.present?
-      = message.content
+      .user_comment__content
+        = message.content
     = image_tag message.image.url if message.image.present?
