--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -3,7 +3,7 @@
     .account-page__inner--left.account-page__header
       %h2 Edit Account
       %h5 アカウントの編集
-      = link_to "ログアウト",user_registration_path, method: :destoroy, class: "btn"
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn"
       = link_to "トップページへ戻る", :back, class: 'btn'
     .account-page__inner--right.user-form
       = form_for(current_user) do |f|
