--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.main_chat__center--comment
+.main_chat__center--comment{data: {message: {id: message.id}}}
   .user
     = message.user.name
     .user__date
